---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/print.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
